<resources>
    <string name="app_name">TBuddy</string>
    <string name="onboarding_title">It’s a big world out there go explore</string>
    <string name="onboarding_subtitle">To get the best of your adventure you just need to leave and go where you like. we are waiting for you</string>
    <string name="onboarding_button">Get Started</string>

    <string name="hint_signin">Already have an account</string>
    <string name="signin_title">Sign in now</string>
    <string name="signin_subtitle">Please sign in to continue our app</string>
    <string name="signin">Sign In</string>

    <string name="hint_signup">Don’t have an account?</string>
    <string name="signup_title">Sign up now</string>
    <string name="signup_subtitle">Please fill the details and create account</string>
    <string name="signup">Sign Up</string>

    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_location">Location</string>
    <string name="hint_search">Search your destination</string>
    <string name="hint_description">Description</string>
    <string name="hint_rating">5</string>
    <string name="hint_review_count">(%1$s)</string>
    <string name="hint_review">Review</string>
    <string name="hint_review_date">Date</string>

    <string name="error_password">Password must be 8 character</string>
    <string name="error">Unknown error occurred</string>
    <string name="error_permission">Permission not granted</string>

    <string name="home_title">Find your Happiness with Us!</string>
    <string name="details_title">Details</string>
    <string name="details_description">About Destination</string>
    <string name="read_more">Read More</string>
    <string name="review">Review</string>
    <string name="review_count">%1$s Person reviewed</string>
    <string name="review_create">Write a Review</string>
    <string name="review_post">Post Review</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Data dummy destination
    <string-array name="data_name">
        <item>Waterfall</item>
        <item>Pantai</item>
        <item>Danau</item>
        <item>Jembatan</item>
        <item>Kebun</item>
        <item>Sungai</item>
    </string-array>
    <string-array name="data_location">
        <item>Surabaya</item>
        <item>Jakarta</item>
        <item>Bandung</item>
        <item>Malang</item>
        <item>Kediri</item>
        <item>Semarang</item>
    </string-array>
    <integer-array name="data_photo">
        <item>@drawable/ayam</item>
        <item>@drawable/elang</item>
        <item>@drawable/gajah</item>
        <item>@drawable/hiu</item>
        <item>@drawable/jerapah</item>
        <item>@drawable/kakaktua</item>
    </integer-array>

    //Data dummy review
    <string-array name="review_name">
        <item>Waterfall</item>
        <item>Pantai</item>
        <item>Danau</item>
        <item>Jembatan</item>
        <item>Kebun</item>
    </string-array>\
    <string-array name="review_review">
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus, erat at auctor varius, lectus tortor imperdiet nibh, nec ultricies dui orci tempus neque. Sed faucibus facilisis varius. Curabitur sit amet metus semper, fringilla nulla placerat, fringilla leo. Sed tortor velit, tincidunt ut orci sed, tincidunt imperdiet mi. Curabitur nisi purus, molestie eu consectetur non, ullamcorper eget nisi. Morbi vehicula eget massa id condimentum.</item>
        <item>Sed non aliquet dui.</item>
        <item>Duis ut mollis risus.</item>
        <item>Fusce a ante aliquam.</item>
        <item>Proin ultricies, diam vel interdum interdum</item>
    </string-array>
    <integer-array name="review_rating">
        <item>5</item>
        <item>4</item>
        <item>2</item>
        <item>1</item>
        <item>3</item>
    </integer-array>
    <integer-array name="review_photo">
        <item>@drawable/ic_face</item>
        <item>@drawable/ic_face</item>
        <item>@drawable/ic_face</item>
        <item>@drawable/ic_face</item>
        <item>@drawable/ic_face</item>
    </integer-array>
</resources>