<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".DetailFragment">

    <TextView
        android:id="@+id/tv_name"
        style="@style/text.title.start"
        android:layout_marginTop="10dp"
        android:text="@string/hint_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subtitle"
        style="@style/text.subtitle"
        android:layout_marginTop="10dp"
        android:text="@string/hint_location"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <LinearLayout
        android:id="@+id/layout_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/tv_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/location_white" />

        <TextView
            android:id="@+id/tv_location"
            style="@style/text.normal"
            android:text="@string/hint_location" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toEndOf="@+id/layout_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/star_enabled" />

        <TextView
            android:id="@+id/tv_rating"
            style="@style/text.normal.bold"
            android:text="@string/hint_rating" />

        <TextView
            android:id="@+id/tv_review_count"
            style="@style/text.normal"
            android:text="@string/hint_review_count" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView13"
        style="@style/text.title.start"
        android:layout_marginTop="20dp"
        android:text="@string/details_description"
        app:layout_constraintStart_toStartOf="@+id/layout_location"
        app:layout_constraintTop_toBottomOf="@+id/layout_location" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/text.normal.start"
        android:layout_marginTop="20dp"
        android:text="@string/hint_description"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/btn_review"
        style="@style/button.normal"
        android:layout_marginBottom="36dp"
        android:text="@string/review"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>