<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <ImageView
        android:id="@+id/iv_item_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_profile" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/text.small.bold"
        android:layout_marginStart="16dp"
        android:text="@string/hint_name"
        app:layout_constraintBottom_toBottomOf="@+id/iv_item_photo"
        app:layout_constraintStart_toEndOf="@+id/iv_item_photo"
        app:layout_constraintTop_toTopOf="@+id/iv_item_photo"
        app:layout_constraintVertical_bias="0.354" />

    <TextView
        android:id="@+id/tv_date"
        style="@style/text.small"
        android:layout_marginStart="16dp"
        android:text="@string/hint_review_date"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name"
        app:layout_constraintStart_toEndOf="@+id/tv_name"
        app:layout_constraintTop_toTopOf="@+id/tv_name"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_date"
        app:srcCompat="@drawable/share_social" />

    <LinearLayout
        android:id="@+id/layout_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/star1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/star_disable" />
        <ImageView
            android:id="@+id/star2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/star_disable" />
        <ImageView
            android:id="@+id/star3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/star_disable" />
        <ImageView
            android:id="@+id/star4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/star_disable" />
        <ImageView
            android:id="@+id/star5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/star_disable" />
        <TextView
            android:id="@id/tv_rating"
            style="@style/text.small.bold"
            android:text="@string/hint_rating"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hint_review"
        app:layout_constraintStart_toStartOf="@+id/iv_item_photo"
        app:layout_constraintTop_toBottomOf="@+id/layout_review" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_review"
        app:srcCompat="@drawable/seperate_line" />

</androidx.constraintlayout.widget.ConstraintLayout>