<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item"
        style="@style/card_view"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/layout"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_item_photo"
                android:layout_width="100dp"
                android:layout_height="120dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_item_name"
                style="@style/text.normal.bold"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="@+id/iv_item_photo"
                app:layout_constraintTop_toTopOf="@+id/iv_item_photo"
                tools:text="@string/hint_name" />

            <ImageView
                android:id="@+id/iv_location"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/location_white"
                app:layout_constraintStart_toStartOf="@+id/tv_item_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/text.normal.start"
                android:layout_marginStart="8dp"
                android:text="@string/hint_location"
                app:layout_constraintStart_toEndOf="@+id/iv_location"
                app:layout_constraintTop_toTopOf="@+id/iv_location" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/iv_location"
                app:layout_constraintTop_toBottomOf="@+id/tv_location">

                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/star_disable" />

                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/star_disable" />

                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/star_disable" />

                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/star_disable" />

                <ImageView
                    android:id="@+id/star5"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/star_disable" />

                <TextView
                    android:id="@+id/tv_rating"
                    style="@style/text.normal.start"
                    android:text="@string/hint_rating" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_review_count"
                style="@style/text.normal.start"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:text="@string/review_count"
                app:layout_constraintBottom_toBottomOf="@+id/iv_item_photo"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>